Added scrambles, aliases

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
 		"accessor-pairs": "warn",
 		"array-callback-return": "error",
 		"consistent-return": "off",
-		"curly": ["error", "multi-line", "consistent"],
+		"curly": "off",
 		"dot-location": ["error", "property"],
 		"dot-notation": "error",
 		"eqeqeq": "off",
@@ -53,13 +53,13 @@
 		"no-throw-literal": "error",
 		"no-unmodified-loop-condition": "error",
 		"no-unused-expressions": "off",
-		"no-unused-vars": ["error", { "args": "none" }],
+		"no-unused-vars": ["warn", { "args": "none", "params": "none" }],
 		"no-console": "off",
 		"no-useless-call": "error",
 		"no-useless-concat": "error",
 		"no-useless-escape": "off",
 		"no-void": "error",
-		"no-warning-comments": "warn",
+		"no-warning-comments": "off",
 		"wrap-iife": "error",
 		"yoda": "error",
 
@@ -76,24 +76,24 @@
 		"array-bracket-spacing": "error",
 		"block-spacing": "error",
 		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
-		"camelcase": "error",
+		"camelcase": "off",
 		"comma-dangle": "error",
 		"comma-spacing": "error",
 		"comma-style": "error",
 		"computed-property-spacing": "error",
 		"consistent-this": "error",
-		"eol-last": "error",
+		"eol-last": "warn",
 		"func-style": ["error", "declaration", { "allowArrowFunctions": true }],
-		"id-length": ["error", { "exceptions": ["i", "j", "a", "b"] }],
-		"indent": ["error", "tab", { "SwitchCase": 1 }],
+		"id-length": ["off"],
+		"indent": ["warn", 4],
 		"key-spacing": "error",
-		"keyword-spacing": ["error", {
+		"keyword-spacing": ["warn", {
 			"overrides": {
-				"if": { "after": false },
-				"for": { "after": false },
-				"while": { "after": false },
-				"catch": { "after": false },
-				"switch": { "after": false }
+				"if": { "after": true },
+				"for": { "after": true },
+				"while": { "after": true },
+				"catch": { "after": true },
+				"switch": { "after": true }
 			}
 		}],
 		"max-len": ["off", 120, 2],
